--- a/config.json
+++ b/config.json
@@ -1,14 +1,31 @@
 {
+    "PORT" : "3000",
+    "ServerState" : "NORMAL",
     "domain" : "xtacy.org",
     "csrfTokenName" : "_xta_srf-tk:",
     "csrfTokenNameKey" : "_tk_nmk-del",
     "clientKey" : "clientKey@xtacy.ieeejmi.org",
+    "Sheets" : {
+        "spreadsheets" : {
+            "xtacy" : "1ysZY3sGmqsWKMXy1i_YfObq8f-VCL-EqkwZ0pH0LI-0"
+        }
+    },
+    "Gmail" : {
+        "username": "Team Xtacy",
+        "userId": "xtacyorg@gmail.com"
+    },
+    "smsService" : {
+        "apikey" : "",
+        "senders" : {}
+    },
     "firebase" : {
-        "apiKey": "AIzaSyADVyiiQYZMWqsK-oAGY0jPoslrNUNzDFw",
-        "authDomain": "xtacy-web.firebaseapp.com",
-        "databaseURL": "https://xtacy-web.firebaseio.com",
-        "projectId": "xtacy-web",
-        "storageBucket": "xtacy-web.appspot.com",
-        "messagingSenderId": "33903971046"
+        "apiKey": "AIzaSyAd17pI-aG3Mx8x_HXNz4lQ7VWRWnSgy4E",
+        "authDomain": "xtacy-org.firebaseapp.com",
+        "databaseURL": "https://xtacy-org.firebaseio.com",
+        "projectId": "xtacy-org",
+        "storageBucket": "xtacy-org.appspot.com",
+        "messagingSenderId": "625260114530"
     }
 }
+
+    
