--- a/bookings/package.json
+++ b/bookings/package.json
@@ -1,10 +1,14 @@
 {
+  "proxy": "http://xtacy.org:3000/",
   "name": "bookings",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^5.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2"
   },
   "scripts": {
