Payments and Bookings

--- a/bookings/src/util/config.json
+++ b/bookings/src/util/config.json
@@ -1,5 +1,18 @@
 {
-    "csrfTokenName" : "_xta_srf-tk:",
-    "csrfTokenNameKey" : "_tk_nmk-del",
-    "clientKey" : "clientKey@xtacy.ieeejmi.org"
+    "csrfTokenName": "_xta_srf-tk:",
+    "csrfTokenNameKey": "_tk_nmk-del",
+    "clientKey": "clientKey@xtacy.ieeejmi.org",
+    "hashToken": "x_sh_09a",
+    "payments": {
+        "key": "RfB79U7s",
+        "salt": "t8QGbjQstr"
+    },
+    "firebase" : {
+        "apiKey": "AIzaSyAd17pI-aG3Mx8x_HXNz4lQ7VWRWnSgy4E",
+        "authDomain": "xtacy-org.firebaseapp.com",
+        "databaseURL": "https://xtacy-org.firebaseio.com",
+        "projectId": "xtacy-org",
+        "storageBucket": "xtacy-org.appspot.com",
+        "messagingSenderId": "625260114530"
+    }
 }
