--- a/bookings/.gitignore
+++ b/bookings/.gitignore
@@ -1,21 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-
-
 # dependencies
 
 /node_modules
 
 
-# testing
-
-/coverage
-
-
-
-# production
-
-/build
+package-lock.json
 
 
 
