--- a/bookings/package.json
+++ b/bookings/package.json
@@ -7,10 +7,11 @@
   "dependencies": {
     "firebase": "^5.7.2",
     "react": "^16.7.0",
+    "react-async-script-loader": "^0.3.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.2"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
