--- a/bookings/package.json
+++ b/bookings/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "https://xtacy.org",
-  "homepage": "https://xtacy.org/book/start",
+  "homepage": "https://xtacy.org/secure/reg",
   "dependencies": {
     "firebase": "^5.7.2",
     "react": "^16.7.0",
