--- a/bookings/package.json
+++ b/bookings/package.json
@@ -2,8 +2,7 @@
   "name": "bookings",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://xtacy.org/",
-  "homepage": "https://xtacy.org/book/start",
+  "homepage": "https://xtacy.org/register/main",
   "dependencies": {
     "firebase": "^5.7.2",
     "react": "^16.7.0",
