--- a/bookings/package.json
+++ b/bookings/package.json
@@ -2,7 +2,8 @@
   "name": "bookings",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://xtacy.org/register/main",
+  "proxy": "https://xtacy.org/",
+  "homepage": "https://xtacy.org/register",
   "dependencies": {
     "firebase": "^5.7.2",
     "react": "^16.7.0",
