Dynamic payment env

--- a/config.json
+++ b/config.json
@@ -22,12 +22,16 @@
     "senders": {}
   },
   "payments": {
-    "ApiKey": "test_eac399e665246c6d7b6f21dc34a", 
-    "AuthToken": "test_2e9abbeb69a1c515e5eaa6bd1dc" 
-  },
+    "env": "sandbox",
+    "sandbox": {
+      "API_KEY": "test_eac399e665246c6d7b6f21dc34a", 
+      "AUTH_TOKEN": "test_2e9abbeb69a1c515e5eaa6bd1dc" 
+    }, 
     "live": {
-      
-    },
+      "API_KEY": "", 
+      "AUTH_TOKEN": "" 
+    }
+  },
   "firebaseClientAPIKey": "AIzaSyAd17pI-aG3Mx8x_HXNz4lQ7VWRWnSgy4E",
   "firebaseServerAPIKey": "AIzaSyDvu4G7Z62WqJfb-aMwQa2YGOCGSTUnxtk",
   "firebase": {
