--- a/config.json
+++ b/config.json
@@ -24,13 +24,20 @@
   "payments": {
     "env": "sandbox",
     "sandbox": {
-      "API_KEY": "0nGi8vGW", 
+      "URI": "https://sandboxsecure.payu.in/_payment",
+      "API_KEY": "0nGi8vGW",
       "SALT": "XDHXV8CAA8",
-      "AUTH_TOKEN": "Tbq1kW7kpBoawenCEp/+SlDb9/U0AzjNJxRgIXjsPKM=" 
+      "AUTH_TOKEN": "Tbq1kW7kpBoawenCEp/+SlDb9/U0AzjNJxRgIXjsPKM=",
+      "SURL": "http://xtacy.org:3000/_payment/success",
+      "FURL": "http://xtacy.org:3000/_payment/failure"
     }, 
     "live": {
-      "API_KEY": "",
-      "AUTH_TOKEN": ""
+      "URI":"https://secure.payu.in/_payment",
+      "API_KEY": "jBbKdkeu",
+      "SALT": "oH4OSVqugy",
+      "AUTH_TOKEN": "iU43WVHaJ1/Y8ohdbg/Ql5qH+lNEOf0yMrkm9Zi4C5o=",
+      "SURL": "http://xtacy.org/_payment/success",
+      "FURL": "http://xtacy.org/_payment/failure"
     }
   },
   "firebaseClientAPIKey": "AIzaSyAd17pI-aG3Mx8x_HXNz4lQ7VWRWnSgy4E",
