--- a/config.json
+++ b/config.json
@@ -22,9 +22,9 @@
     "senders": {}
   },
   "payments": {
-    "env": "production",
+    "env": "sandbox",
     "sandbox": {
-      "URI": "https://sandboxsecure.payu.in/_payment",
+      "URI": "https://secure.payu.in/_payment",
       "API_KEY": "0nGi8vGW",
       "SALT": "XDHXV8CAA8",
       "AUTH_TOKEN": "Tbq1kW7kpBoawenCEp/+SlDb9/U0AzjNJxRgIXjsPKM=",
