--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
   },
   "Gmail": {
     "username": "Team Xtacy",
-    "userId": "xtacyorg@gmail.com"
+    "userId": "mailer.xtacy@gmail.com"
   },
   "smsService": {
     "apikey": "",
